samples/_failures_safe/1761552642_d9590d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dedbf943.c: In function ‘tokenize’:
./samples/SAFE/__tmp_dedbf943.c:164:13: error: expected declaration or statement at end of input
  164 |             token_count++;
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_dedbf943.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dedbf943.c:164:13: error: expected declaration or statement at end of input
